--- a/categorias.html
+++ b/categorias.html
@@ -22,13 +22,13 @@
     <section>
       <h3>Frutas e Verduras</h3>
       <article>
-        <img src="maca.jpg" width="200" height="200" alt="Maçã">
+        <img src="imagens/maca.jpg" width="200" height="200" alt="Maçã">
         <h4>Maçã</h4>
         <p>Maçãs frescas e suculentas.</p>
         <p>R$ 5,00 / kg</p>
       </article>
       <article>
-        <img src="banana.jpg" width="200" height="200" alt="Banana">
+        <img src="imagens/banana.jpg" width="200" height="200" alt="Banana">
         <h4>Banana</h4>
         <p>Bananas maduras e saborosas.</p>
         <p>R$ 4,00 / kg</p>
@@ -38,13 +38,13 @@
     <section>
       <h3>Produtos Alimentícios Não Perecíveis</h3>
       <article>
-        <img src="arroz.jpg" width="200" height="200" alt="Arroz">
+        <img src="imagens/arroz.jpg" width="200" height="200" alt="Arroz">
         <h4>Arroz</h4>
         <p>Pacote de 5kg de arroz branco.</p>
         <p>R$ 20,00</p>
       </article>
       <article>
-        <img src="feijao.jpg" width="200" height="200" alt="Feijão">
+        <img src="imagens/feijao.jpg" width="200" height="200" alt="Feijão">
         <h4>Feijão</h4>
         <p>Pacote de 1kg de feijão preto.</p>
         <p>R$ 8,00</p>
@@ -54,13 +54,13 @@
     <section>
       <h3>Produtos de Higiene e Limpeza</h3>
       <article>
-        <img src="detergente.jpg" width="200" height="200" alt="Detergente">
+        <img src="imagens/detergente.jpg" width="200" height="200" alt="Detergente">
         <h4>Detergente</h4>
         <p>Detergente líquido neutro de 500ml.</p>
         <p>R$ 3,00</p>
       </article>
       <article>
-        <img src="sabao.jpg" width="200" height="200" alt="Sabão em Pó">
+        <img src="imagens/sabao.jpg" width="200" height="200" alt="Sabão em Pó">
         <h4>Sabão em Pó</h4>
         <p>Sabão em pó para roupas (2kg).</p>
         <p>R$ 15,00</p>
