--- a/contato.html
+++ b/contato.html
@@ -1,30 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contato - Minimercado Davi</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <h1>Minimercado Davi</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="categorias.html">Categorias</a>
-      <a href="servicos.html">Serviços</a>
+      <a href="index.html">Home</a> | 
+      <a href="categorias.html">Categorias</a> | 
+      <a href="servicos.html">Serviços</a> | 
       <a href="contato.html">Contato</a>
     </nav>
   </header>
 
   <main>
-    <h2>Contato</h2>
-    <p>E-mail: Davi@minimercado.com</p>
-    <p>Endereço: Borges de Medeiros, 123, Porto Alegre - RS</p>
+    <h2>Fale Conosco</h2>
+    <form id="formContato" class="form-group">
+      <div class="mb-3">
+        <label for="nome" class="form-label">Nome</label>
+        <input type="text" id="nome" class="form-control" placeholder="Digite seu nome" required>
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">E-mail</label>
+        <input type="email" id="email" class="form-control" placeholder="email@exemplo.com" required>
+      </div>
+      <div class="mb-3">
+        <label for="telefone" class="form-label">Telefone</label>
+        <input type="tel" id="telefone" class="form-control" placeholder="(XX) XXXXX-XXXX" required>
+      </div>
+      <div class="mb-3">
+        <label for="mensagem" class="form-label">Mensagem</label>
+        <textarea id="mensagem" class="form-control" placeholder="Digite sua mensagem" rows="5" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
   </main>
 
-  <footer>
+  <footer class="footer">
     <p>&copy; 2024 Minimercado Davi. Todos os direitos reservados.</p>
-    <p>Contato: davi@minimercado.com</p>
+    <p>Contato: contato@minimercadodavi.com</p>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="jsscript.js"></script>
 </body>
 </html>
