--- a/servicos.html
+++ b/servicos.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Serviços - Minimercado Davi</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <h1>Minimercado Davi</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="categorias.html">Categorias</a>
-      <a href="servicos.html">Serviços</a>
+      <a href="index.html">Home</a> | 
+      <a href="categorias.html">Categorias</a> | 
+      <a href="servicos.html">Serviços</a> | 
       <a href="contato.html">Contato</a>
     </nav>
   </header>
 
   <main>
     <h2>Serviços</h2>
-    <article>
-      <h3>Retirada no Local</h3>
-      <p>Compre online e retire no minimercado sem custo adicional.</p>
-    </article>
-    <article>
-      <h3>Tele-entrega</h3>
-      <p>Receba seus produtos em casa com uma taxa de entrega de R$10,00.</p>
-    </article>
+    <form id="formAgendamento" class="form-group">
+      <div class="mb-3">
+        <label for="data" class="form-label">Data:</label>
+        <input type="date" id="data" name="data" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="hora" class="form-label">Hora:</label>
+        <input type="time" id="hora" name="hora" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="servico" class="form-label">Serviço:</label>
+        <select id="servico" name="servico" class="form-control">
+          <option value="retirada">Retirada</option>
+          <option value="entrega">Entrega</option>
+        </select>
+      </div>
+      <button type="submit" class="btn btn-primary">Agendar</button>
+    </form>
   </main>
 
-  <footer>
+  <footer class="footer">
     <p>&copy; 2024 Minimercado Davi. Todos os direitos reservados.</p>
-    <p>Contato: davi@minimercado.com</p>
+    <p>Contato: contato@minimercadodavi.com</p>
   </footer>
 </body>
 </html>
