--- a/index.html
+++ b/index.html
@@ -1,30 +1,58 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minimercado Davi</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <h1>Minimercado Davi</h1>
-    <p>Qualidade e conveniência perto de você!</p>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="categorias.html">Categorias</a>
-      <a href="servicos.html">Serviços</a>
+      <a href="index.html">Home</a> | 
+      <a href="categorias.html">Categorias</a> | 
+      <a href="servicos.html">Serviços</a> | 
       <a href="contato.html">Contato</a>
     </nav>
   </header>
 
   <main>
-    <h2>Bem-vindo ao Minimercado XYZ</h2>
-    <p>Encontre os melhores produtos e serviços na nossa plataforma online!</p>
+    <h2 id="saudacao"></h2>
+    <div id="carrosselProdutos" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="maca.jpg" width="500" height="500" class="d-block w-100" alt="Imagem de uma maçã">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Maçã</h5>
+            <p>Fresca e deliciosa.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="banana.jpg" width="500" height="500" class="d-block w-100" alt="Imagem de uma banana">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Banana</h5>
+            <p>Rica em potássio.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carrosselProdutos" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carrosselProdutos" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Próximo</span>
+      </button>
+    </div>
   </main>
 
-  <footer>
+  <footer class="footer">
     <p>&copy; 2024 Minimercado Davi. Todos os direitos reservados.</p>
-    <p>Contato: davi@minimercado.com</p>
+    <p>Contato: contato@minimercadodavi.com</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="jsscript.js"></script>
 </body>
 </html>
