--- a/categorias.html
+++ b/categorias.html
@@ -58,11 +58,11 @@
       <h3>Frutas e Verduras</h3>
       <div class="d-flex justify-content-center flex-wrap">
         <div class="text-center">
-          <img src="maca.jpg" width="150" height="150" alt="Imagem de uma maçã">
+          <img src="imagens/maca.jpg" width="150" height="150" alt="Imagem de uma maçã">
           <p>Maçã - R$ 5,00</p>
         </div>
         <div class="text-center">
-          <img src="banana.jpg" width="150" height="150" alt="Imagem de uma banana">
+          <img src="imagens/banana.jpg" width="150" height="150" alt="Imagem de uma banana">
           <p>Banana - R$ 4,00</p>
         </div>
       </div>
@@ -71,7 +71,7 @@
     <section>
       <h3>Produtos Alimentícios Não Perecíveis</h3>
       <div class="text-center">
-        <img src="arroz.jpg" width="150" height="150" alt="Imagem de um pacote de arroz">
+        <img src="imagens/arroz.jpg" width="150" height="150" alt="Imagem de um pacote de arroz">
         <p>Arroz - R$ 10,00</p>
       </div>
     </section>
