--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <div id="carrosselProdutos" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="maca.jpg" width="500" height="500" class="d-block w-100" alt="Imagem de uma maçã">
+          <img src="imagens/maca.jpg" width="500" height="500" class="d-block w-100" alt="Imagem de uma maçã">
           <div class="carousel-caption d-none d-md-block">
             <h5>Maçã</h5>
             <p>Fresca e deliciosa.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="banana.jpg" width="500" height="500" class="d-block w-100" alt="Imagem de uma banana">
+          <img src="imagens/banana.jpg" width="500" height="500" class="d-block w-100" alt="Imagem de uma banana">
           <div class="carousel-caption d-none d-md-block">
             <h5>Banana</h5>
             <p>Rica em potássio.</p>
